# polytech-opengl

./: .gitignore  CMakeLists.txt  README.md
course_work/: 5130904_10101_Абраамян_КП.docx  main_1.py  main_17.py
lab1/: CMakeLists.txt  КГ_Абраамян_Лаб_1.docx
lab1/src/: constants.h  main.cc
lab1/src/state_machine/: state_machine.h
lab1/src/states/: states.cc
lab1/src/states/conus_sphere_moving_state/: constants.h  conus_sphere_stay_state.cc
lab1/src/states/conus_sphere_stay_state/: constants.h  conus_sphere_stay_state.cc
lab1/src/states/tor_cylinder_rotate_state/: constants.h  tor_cylinder_rotate_state.cc
lab1/src/states/tor_cylinder_state/: constants.h  tor_cylinder_state.cc
lab1/src/states/tor_stretch_cylinder_state/: constants.h  tor_stretch_cylinder_state.cc  tor_stretch_cylinder_state.h
lab2/: CMakeLists.txt  conanfile.py  КГ_Абраамян_Лаб_2.docx
lab2/src/: constants.h  main.cc
lab2/src/glwidget/: glwidget.cc  glwidget.h
lab2/src/main_window/: main_window.cc  main_window.h
lab2/src/params_window/: params_window.cc  params_window.h
lab2/src/states/conus_sphere_moving_state/: conus_sphere_stay_state.cc
lab2/src/states/conus_sphere_stay_state/: constants.h  conus_sphere_stay_state.cc
lab2/src/states/tor_cylinder_rotate_state/: constants.h  tor_cylinder_rotate_state.cc  tor_cylinder_rotate_state.h
lab2/src/states/tor_cylinder_state/: constants.h  tor_cylinder_state.cc  tor_cylinder_state.h
lab2/src/states/tor_stretch_cylinder_state/: tor_stretch_cylinder_state.cc
lab2/src/utils/: utils.cc  utils.h
lab3/: CMakeLists.txt  README.md  main.py  КГ_Абраамян_Лаб_3.docx
lab3/src/: constants.h
lab3/src/custom_widgets/: fancy_slider.cc
lab3/src/glwidget/: glwidget.cc  glwidget.h
lab3/src/main_window/: main_window.cc  main_window.h
lab3/src/states/: states.cc
lab3/src/states/conus_sphere_stay_state/: constants.h  conus_sphere_stay_state.cc
lab3/src/utils/: utils.cc
simple_shader_prog/: CMakeLists.txt
simple_shader_prog/shaders/: shadow.frag  shadow.vert
simple_shader_prog/src/: main.cc
simple_shader_prog/src/custom_widgets/: fancy_slider.h
simple_shader_prog/src/glwidget/: glwidget.cc  glwidget.h
simple_shader_prog/src/main_window/: main_window.cc
simple_shader_prog/src/params_window/: params_window.cc
simple_shader_prog/src/state_machine/: state_machine.cc  state_machine.h
simple_shader_prog/src/states/: states.h
simple_shader_prog/src/states/conus_sphere_cylinder_stay_state/: constants.h  conus_sphere_cylinder_stay_state.cc  conus_sphere_cylinder_stay_state.h
simple_shader_prog/src/utils/: utils.h
src/: constants.h  main.cc
src/state_machine/: state_machine.cpp  state_machine.h
src/states/: states.h
src/states/conus_sphere_moving_state/: constants.h  conus_sphere_moving_state.h  conus_sphere_stay_state.cc
src/states/conus_sphere_stay_state/: constants.h  conus_sphere_stay_state.cc  conus_sphere_stay_state.h
